# apriltags_tas

./: .clang-format  README.md
apriltags/: CMakeLists.txt  README.md  README.txt  package.xml
apriltags/include/apriltags/: Edge.h  GLine2D.h  GLineSegment2D.h  GrayModel.h  Gridder.h  Homography33.h  MathUtil.h  Quad.h  Segment.h  Tag16h5.h  Tag16h5_other.h  Tag25h7.h  Tag25h9.h  Tag36h11.h  Tag36h11_other.h  Tag36h9.h  TagDetection.h  TagDetectionUtils.h  TagDetector.h  TagFamily.h  UnionFindSimple.h  XYWeight.h  pch.h
apriltags/src/: Edge.cc  GLine2D.cc  GLineSegment2D.cc  GrayModel.cc  Homography33.cc  MathUtil.cc  Quad.cc  Segment.cc  TagDetection.cc  TagDetectionUtils.cc  TagDetector.cc  TagFamily.cc  UnionFindSimple.cc
apriltags_msgs/: CMakeLists.txt  package.xml
apriltags_msgs/msg/: AprilTag.msg  AprilTagDetections.msg
apriltags_tas/: CMakeLists.txt  LICENSE  package.xml
apriltags_tas/cfg/: AprilTagDetector.cfg
apriltags_tas/config/: tags.yaml
apriltags_tas/include/apriltag_ros/: common_functions.h
apriltags_tas/include/apriltags_tas/: apriltag_detector.h  edge_cost_functor.h
apriltags_tas/launch/: apriltag_detection.launch
apriltags_tas/src/: apriltag_detector.cpp  apriltag_detector_node.cpp  common_functions.cpp
