<?xml version="1.0"?>
<package>
  <name>apriltags</name>
  <version>0.0.0</version>
  <description>A catkin version of the C++ apriltags library based on OpenCV</description>

  <maintainer email="bianca.forkel@unibw.de">Bianca Forkel</maintainer>

  <author>Michael Kaess</author>
  <author>Hordur Johannson</author>
  <author>Hamphrey Hu</author>
  <author>Mitchell Wills</author>

  <license>LGPLv2.1</license>

  <url type="website">https://github.com/Humhu/apriltags/</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>eigen</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>libv4l-dev</build_depend>
  <build_depend>libopencv-dev</build_depend>
  <run_depend>eigen</run_depend>
  <run_depend>libv4l-dev</run_depend>
  <run_depend>libopencv-dev</run_depend>


  <export>
  </export>
</package>