<?xml version="1.0"?>
<package format="2">
  <name>apriltags_msgs</name>
  <version>0.0.1</version>
  <description>The apriltags_msgs package</description>

  <maintainer email="bianca.forkel@unibw.de">bifo</maintainer>

  <license>LGPLv2.1</license>

  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/apriltags_cpp_tas</url> -->

  <author email="bianca.forkel@unibw.de">bifo</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
